# lamahub

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: build-push.yml
lamahub/: __init__.py  api.py  app.py  config.py  env.py  events.py  extensions.py  routes.py  shell.py  start.py
lamahub/services/: endpoints.py  fixed_store.py  hf_deploy.py  ollama.py  staging_store.py
lamahub/services/system/: log.py
lamahub/static/css/: app.css
lamahub/static/js/: app.js  chat.js  deploy.js  endpoints.js  icons.js  models.js  requests.js  utils.js
lamahub/templates/: main.jinja2
